[package]
name = "rsf"
description = "Distributed and streaming anamoly detection using random shift trees"
version = "0.1.0"
edition = "2021"

[dependencies]
classifier-measures = "0.4.3"
itertools = "0.10.3"
ndarray = { version = "0.15.4", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
num-traits = "0.2.15"
plotly = { git = "https://github.com/igiagkiozis/plotly/", branch = "dev", features = ["ndarray", "kaleido"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.1"

[dev-dependencies]
chrono = "0.4.19"
csv = "1.1.6"
extended-isolation-forest = { path = "extended-isolation-forest" }
glob = "0.3.0"
lazy_static = "1.4.0"
ndarray-npy = "0.8.1"
plotly_stable = { package = "plotly", version = "0.7.0", features = [ "kaleido" ] }
pyo3 = { version = "0.17.1", features = ["auto-initialize"] }
rcf = { git = "https://github.com/aws/random-cut-forest-by-aws/" }
rustfft = "6.0.1"
serde = "1.0.136"
serde_json = "1.0.79"

[profile.test]
opt-level = 3
