[package]
name = "index_rsf"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.15.0", features = ["openblas-system"] }
rand = "0.8.5"
num = "0.4.0"

[dev-dependencies]
ndarray-npy = "0.8.1"
glob = "0.3.0"
rayon = "1.5.1"

[profile.test]
opt-level = 3
